Finnnalllly fixed letter-spacing issue for iOS

--- a/styles/global-styles.css
+++ b/styles/global-styles.css
@@ -33,8 +33,7 @@ html, body {
 	height: 100%;
 	font-size: 19px;
 	font-family: var(--sans-font), sans-serif;
-	font-weight: normal;
-	/* letter-spacing: 0; */
+	font-weight: 400;
 	color: var(--dark-blue);
 }
 
@@ -58,7 +57,7 @@ a, a:visited {
 
 a.big-link {
 	font-size: 1.25em;
-	font-weight: bold;
+	font-weight: 600;
 }
 
 @media (hover: hover) {
@@ -71,8 +70,7 @@ a.big-link {
 h1, h2, h3, h4, h5 {
 	margin: 0 0 20px 0;
 	font-family: var(--serif-font), serif;
-	font-weight: bold;
-	/* letter-spacing: -0.5px; */
+	font-weight: 700;
 }
 
 p {
@@ -81,9 +79,8 @@ p {
 
 em {
 	font-family: var(--serif-font);
-	font-weight: bold;
+	font-weight: 700;
 	font-style: normal;
-	/* letter-spacing: -0.5px; */
 }
 
 small {
